--- a/README
+++ b/README
@@ -31,6 +31,8 @@
 
 * Build MIUI bassed on STOCK ROM
 
+	Copy STOCK rom to the /root/miui_xperia/**DEVICE** and rename zip archive to stockrom.zip
+
 	$ cd ~/miui_xperia
 
 	To build MIUI for Sony Xperia Go
