--- a/translations/Calendar/res/values-de/strings.xml
+++ b/translations/Calendar/res/values-de/strings.xml
@@ -5,12 +5,12 @@
     <string name="where_label">Wo</string>
     <string name="when_label">Wann</string>
     <string name="timezone_label">Zeitzone</string>
-    <string name="attendees_label">Teilnehmer</string>
+    <string name="attendees_label">Gäste</string>
     <string name="repeats_label">Wiederholung</string>
-    <string name="no_title_label">(Kein Name)</string>
+    <string name="no_title_label">(Kein Titel)</string>
     <string name="calendar_refresh">Aktualisieren</string>
     <string name="show_day_view">Tag anzeigen</string>
-    <string name="agenda_view">Agenda</string>
+    <string name="agenda_view">Terminübersicht</string>
     <string name="day_view">Tag</string>
     <string name="week_view">Woche</string>
     <string name="month_view">Monat</string>
@@ -20,122 +20,117 @@
     <string name="event_delete">Termin löschen</string>
     <string name="goto_today">Heute</string>
     <string name="menu_preferences">Einstellungen</string>
-    <string name="menu_select_visible_calendars">Angezeigte Kalender</string>
+    <string name="menu_select_visible_calendars">Anzeige Optionen</string>
     <string name="search">Suche</string>
-    <string name="hide_controls">Steuerung verbergen</string>
-    <string name="show_controls">Steuerung zeigen</string>
-    <string name="select_visible_calendars_title">Angezeigte Kalender</string>
+    <string name="hide_controls">Steuerelemente aus</string>
+    <string name="show_controls">Steuerelemente ein</string>
+    <string name="select_visible_calendars_title">Kalender Anzeige Optionen</string>
     <string name="synced">Synchronisiert</string>
     <string name="not_synced">Nicht synchronisiert</string>
-    <string name="acct_not_synced">Dieser Account wird nicht synchronisiert, deine Kalender sind evtl. nicht aktuell.</string>
+    <string name="acct_not_synced">Dieses Konto wird nicht synchronisiert. Ihre Kalender sind möglicherweise nicht aktuell.</string>
     <string name="accounts">Konten &amp; Synchronisierung</string>
-    <string name="select_synced_calendars_title">Kalender zum Synchronisieren</string>
-    <string name="select_synced_calendars_button">Kalender zum Synchronisieren</string>
-    <string name="hint_what">Name des Termins</string>
-    <string name="hint_where">Ort</string>
+    <string name="select_synced_calendars_title">Zu synchronisierende Kalender</string>
+    <string name="select_synced_calendars_button">Zu synchronisierende Kalender</string>
+    <string name="hint_what">Terminname</string>
+    <string name="hint_where">Standort</string>
     <string name="hint_description">Beschreibung</string>
-    <string name="hint_attendees">Teilnehmer</string>
-    <string name="creating_event">Termin erstellt.</string>
-    <string name="saving_event">Termin gespeichert.</string>
-    <string name="empty_event">Leerer Termin wurde nicht erstellt.</string>
-    <string name="creating_event_with_guest">Einladungen werden verschickt.</string>
-    <string name="saving_event_with_guest">Aktualisierungen werden verschickt.</string>
-    <string name="alert_title">Kalender-Benachrichtigungen</string>
+    <string name="hint_attendees">Gäste</string>
+    <string name="creating_event">Termin erstellt</string>
+    <string name="saving_event">Termin gespeichert</string>
+    <string name="empty_event">Leerer Termin nicht erstellt</string>
+    <string name="creating_event_with_guest">Einladungen werden gesendet.</string>
+    <string name="saving_event_with_guest">Updates werden gesendet.</string>
+    <string name="alert_title">Benachrichtigungen</string>
     <string name="event_info_title">Termin anzeigen</string>
-    <string name="event_info_title_invite">Einladung zum Meeting</string>
-    <string name="edit_event_to_label">An</string>
+    <string name="event_info_title_invite">Einladung zu einer Besprechung</string>
+    <string name="edit_event_to_label">Bis</string>
     <string name="edit_event_from_label">Von</string>
-    <string name="edit_event_all_day_label">Ganztätig</string>
+    <string name="edit_event_all_day_label">Ganztägig</string>
     <string name="edit_event_calendar_label">Kalender</string>
     <string name="edit_event_show_all">Alle anzeigen</string>
     <string name="description_label">Beschreibung</string>
-    <string name="presence_label">Zeige mich als</string>
-    <string name="privacy_label">Privatsphäre</string>
+    <string name="presence_label">Mein Status</string>
+    <string name="privacy_label">Datenschutz</string>
     <string name="reminders_label">Erinnerung hinzufügen</string>
-    <string name="no_syncable_calendars">Keine Kalender vorhanden</string>
-    <string name="no_calendars_found">Du musst mindestens ein Kalender-Konto hinzufügen und anzeigen lassen, bevor Du einen Termin erstellen kannst. Berühre Konto hinzufügen um ein Konto hinzuzufügen (Wenn Du bereits ein Konto hinzugefügt hast, warte bis die Synchronisierung vollständig ist und versuche es erneut), oder berühre Abbrechen und stelle sicher, dass mindestens ein Kalender angezeigt wird.</string>
-    <string name="create_an_account_desc">"Der Kalender funktioniert besser mit einem Google-Konto.
+    <string name="no_syncable_calendars">Keine Kalender</string>
+    <string name="no_calendars_found">Damit Sie einen Termin hinzufügen können, müssen Sie mindestens ein Google Kalender-Konto zu Ihrem Gerät hinzufügen und einen Kalender sichtbar machen. Tippen Sie zum Hinzufügen eines Kontos auf \"Konto hinzufügen\". Falls Sie gerade ein Konto hinzugefügt haben, warten Sie, bis die Synchronisierung abgeschlossen ist, und versuchen Sie es dann erneut. Sie können auch auf \"Abbrechen\" tippen und sich vergewissern, dass mindestens ein Kalender sichtbar ist.</string>
+    <string name="create_an_account_desc">"Google Kalender funktioniert besser mit einem Google-Konto.
 
-• Zugriff von jedem Web-Browser
-• Speichere Deine Termine sicher"</string>
+• Zugriff über jeden beliebigen Browser
+• Sichern von Terminen mit Schutzfunktion"</string>
     <string name="add_account">Konto hinzufügen</string>
     <string name="view_event_calendar_label">Kalender:</string>
-    <string name="view_event_organizer_label">Organizer:</string>
-    <string name="view_event_response_label">Teilnehmen?</string>
+    <string name="view_event_organizer_label">Veranstalter:</string>
+    <string name="view_event_response_label">Teilnahme?</string>
     <string name="response_yes">Ja</string>
     <string name="response_maybe">Vielleicht</string>
     <string name="response_no">Nein</string>
-    <string name="event_info_organizer">Organizer:</string>
-    <string name="event_info_desc_more">More</string>
-    <string name="event_info_desc_less">Less</string>
+    <string name="event_info_organizer">Veranstalter:</string>
+    <string name="event_info_desc_more">Mehr</string>
+    <string name="event_info_desc_less">Weniger</string>
     <string name="event_info_reminders_label">Erinnerungen</string>
     <string name="agenda_today">HEUTE, %1$s</string>
     <string name="agenda_yesterday">GESTERN, %1$s</string>
     <string name="agenda_tomorrow">MORGEN, %1$s</string>
-    <string name="loading">Lädt…</string>
-    <string name="show_older_events">Berühren, um Termine vor %1$s anzuzeigen</string>
-    <string name="show_newer_events">Berühren, um Termine nach %1$s anzuzeigen</string>
-    <string name="search_title">Durchsuche meine Kalender</string>
+    <string name="loading">Wird geladen...</string>
+    <string name="show_older_events">Antippen für Termine vor dem %1$s</string>
+    <string name="show_newer_events">Antippen für Termine nach dem %1$s</string>
+    <string name="search_title">In meinen Kalendern suchen</string>
     <string name="edit_event_label">Details</string>
     <string name="edit_label">Bearbeiten</string>
     <string name="delete_label">Löschen</string>
     <string name="save_label">Fertig</string>
     <string name="discard_label">Abbrechen</string>
-    <string name="snooze_all_label">Alle stummschalten</string>
-    <string name="dismiss_all_label">alle verwerfen</string>
+    <string name="snooze_all_label">Später erinnern</string>
+    <string name="dismiss_all_label">Alle schließen</string>
     <string name="does_not_repeat">Einmaliger Termin</string>
     <string name="daily">Täglich</string>
-    <string name="every_weekday">Wochentags (Mo–Fr)</string>
+    <string name="every_weekday">Werktags (Mo-Fr)</string>
     <string name="weekly">Wöchentlich (jeden %s)</string>
     <string name="monthly_on_day_count">Monatlich (jeden %1$s %2$s)</string>
     <string name="monthly">Monatlich</string>
     <string name="yearly_plain">Jährlich</string>
-    <string name="monthly_on_day">Monatlich (an Tag %s)</string>
+    <string name="monthly_on_day">Monatlich (am %s Tag.)</string>
     <string name="yearly">Jährlich (am %s)</string>
-    <string name="custom">Spezifisch (Funktion nicht verfügbar)</string>
+    <string name="custom">Benutzerdefiniert (Anpassung über Telefon nicht möglich)</string>
     <string name="modify_event">Nur diesen Termin ändern</string>
-    <string name="modify_all">Alle Termine dieser Serie ändern</string>
+    <string name="modify_all">Alle Termine in dieser Serie ändern</string>
     <string name="modify_all_following">Diesen und alle zukünftigen Termine ändern</string>
     <string name="new_event_dialog_label">Neuer Termin</string>
     <string name="new_event_dialog_option">Neuer Termin</string>
     <string name="delete_this_event_title">Diesen Termin löschen?</string>
     <string name="change_response_title">Antwort ändern</string>
-    <string name="menu_general_preferences">Standard-Einstellungen</string>
+    <string name="menu_general_preferences">Allgemein</string>
     <string name="menu_about_preferences">Über Kalender</string>
     <string name="preferences_title">Einstellungen</string>
-    <string name="preferences_general_title">Anzeige-Einstellungen für Kalender</string>
-    <string name="preferences_reminder_title">Erinnerungs-Einstellungen</string>
-    <string name="preferences_hide_declined_title">Abgelehnte Termine verbergen</string>
+    <string name="preferences_general_title">Kalender-Ansicht festlegen</string>
+    <string name="preferences_reminder_title">Erinnerung</string>
+    <string name="preferences_hide_declined_title">Abgelehnte Termine ausblenden</string>
     <string name="preferences_week_start_day_title">Woche beginnt am</string>
     <string name="preferences_week_start_day_dialog">Woche beginnt am</string>
-    <string name="preferences_week_start_day_default">-1</string>
     <string name="preferences_clear_search_history_title">Suchverlauf löschen</string>
-    <string name="preferences_clear_search_history_summary">Löscht alle durchgeführten Suchen</string>
-    <string name="search_history_cleared">Suchverlauf gelöscht.</string>
-    <string name="preferences_alerts_title">Erinnerungen</string>
-    <string name="preferences_alerts_vibrateWhen_title">Vibrieren</string>
+    <string name="preferences_clear_search_history_summary">Alle Suchen aus dem Verlauf entfernen</string>
+    <string name="search_history_cleared">Suchverlauf gelöscht</string>
+    <string name="preferences_alerts_title">Benachrichtigungen</string>
+    <string name="preferences_alerts_vibrateWhen_title">Vibration</string>
     <string name="preferences_alerts_ringtone_title">Klingelton auswählen</string>
-    <string name="preferences_alerts_popup_title">Pop-Up-Erinnerung</string>
-    <string name="preferences_default_reminder_title">Standardzeit für Erinnerungen</string>
-    <string name="preferences_default_reminder_dialog">Standardzeit für Erinnerungen</string>
+    <string name="preferences_alerts_popup_title">Pop-up-Benachrichtigung</string>
+    <string name="preferences_default_reminder_title">Standard-Erinnerungszeit</string>
+    <string name="preferences_default_reminder_dialog">Standard-Erinnerungszeit</string>
     <string name="preferences_default_reminder_default">10</string>
-    <string name="preferences_use_home_tz_title">Heimat-Ortszeit verwenden</string>
-    <string name="preferences_use_home_tz_descrip">Zeigt auf Reisen Kalender und Termine in der Heimats-Ortzeit an</string>
-    <string name="preferences_home_tz_title">Heimats-Ortzeit</string>
-    <string name="preferences_home_tz_default">America/Los_Angeles</string>
-    <string name="preferences_show_week_num_title">Wochenzahl anzeigen</string>
+    <string name="preferences_use_home_tz_title">Heimatzeit beibehalten</string>
+    <string name="preferences_use_home_tz_descrip">Kalender-/Terminzeiten in Heimat Zeitzone anzeigen</string>
+    <string name="preferences_home_tz_title">Heimatzeitzone</string>
+    <string name="preferences_home_tz_default">Europe/Amsterdam</string>
+    <string name="preferences_show_week_num_title">Kalenderwoche anzeigen</string>
     <string name="preferences_about_title">Über</string>
     <string name="preferences_build_version">Build-Version</string>
-    <string name="prefDefault_alerts_vibrateWhen">never</string>
-    <string name="prefDefault_alerts_vibrate_true">always</string>
-    <string name="prefDefault_alerts_vibrate_false">never</string>
-    <string name="prefDialogTitle_vibrateWhen">Vibrieren</string>
-    <string name="gadget_title">Kalendar</string>
-    <string name="gadget_no_events">Keine bevorstehenden Termine</string>
+    <string name="prefDialogTitle_vibrateWhen">Vibration</string>
+    <string name="gadget_title">Kalender</string>
+    <string name="gadget_no_events">Keine anstehenden Termine</string>
     <string name="tomorrow">Morgen</string>
-    <string name="tardis">TARDIS</string>
     <string name="copy_db">Datenbank senden</string>
-    <string name="directory_searching_fmt">Suche %s…</string>
+    <string name="directory_searching_fmt">%s wird durchsucht…</string>
     <string name="accessibility_remove_attendee">Teilnehmer entfernen</string>
     <string name="accessibility_pick_start_date">Startdatum</string>
     <string name="accessibility_pick_start_time">Startzeit</string>
@@ -146,31 +141,30 @@
     <string name="accessibility_remove_reminder">Erinnerung entfernen</string>
     <string name="accessibility_add_attendee">Teilnehmer hinzufügen</string>
     <string name="accessibility_sync_cal">Kalender synchronisieren</string>
-    <string name="accessibility_all_day">Ganztägigen Termin hinzufügen</string>
+    <string name="accessibility_all_day">Ganztägiger Termin</string>
     <string name="accessibility_repeats">Wiederholung</string>
     <string name="accessibility_reminder_time">Erinnerungszeit</string>
     <string name="accessibility_reminder_type">Art der Erinnerung</string>
-    <string name="accessibility_reminder_showmeas">Zeige mich als</string>
-    <string name="accessibility_reminder_privacy">Privatsphäre</string>
-    <string name="day_view_new_event_hint">+ Neuer Termin</string>
-    <string name="template_announce_item_index">Termin %1$s von %2$s.</string>
+    <string name="accessibility_reminder_showmeas">Mein Status</string>
+    <string name="accessibility_reminder_privacy">Datenschutz</string>
+    <string name="day_view_new_event_hint">+ neuer Termin</string>
+    <string name="template_announce_item_index">Termin %1$s von %2$s</string>
     <string name="local_calendar_display_name">Lokaler Kalender</string>
     <string name="birthday_calendar_display_name">Geburtstagserinnerung</string>
     <string name="local_owner_account_name">Lokales Konto</string>
-    <string name="birthday_notification_title_today">%1$ss Geburtstag</string>
-    <string name="birthday_notification_text_today">Vergiss nicht, zum Geburtstag zu gratulieren!</string>
-    <string name="birthday_notification_title_three_days_later">%1$s hat bald Geburtstag</string>
-    <string name="birthday_notification_text_three_days_later">3 bis zum Geburtstag (%3$s)</string>
+    <string name="birthday_notification_title_today">"%1$s's Geburtstag"</string>
+    <string name="birthday_notification_text_today">Nicht vergessen zum Geburtstag zu gratulieren!</string>
+    <string name="birthday_notification_title_three_days_later">"%1$s's Geburtstag steht vor der Tür"</string>
+    <string name="birthday_notification_text_three_days_later">Noch 3 Tage bis zum Geburtstag (%3$s)</string>
     <string name="birthday_notification_age_term" />
     <string name="birthday_notification_type_term_lunar" />
     <string name="birthday_event_title">@string/birthday_notification_title_today</string>
-    <string name="birthday_event_description">%1$s hat heute Geburtstag!</string>
+    <string name="birthday_event_description">"Heute ist %1$s's Geburtstag!"</string>
     <string name="birthday_event_description_detail_leap" />
     <string name="birthday_event_description_detail_smart" />
     <string name="jump_date">Springen</string>
     <string name="jump_date_full">Zu Datum springen</string>
-    <string name="google_email_domain">gmail.com</string>
-    <string name="more_string">%1$s mehr...</string>
-    <string name="chips_waiting_for_directory_result">Waiting for more contacts</string>
-    <string name="copy">Copy email address</string>
+    <string name="more_string">%1$s weitere...</string>
+    <string name="chips_waiting_for_directory_result">Warte auf weitere Kontakte</string>
+    <string name="copy">Email-Adresse kopieren</string>
 </resources>
